<resources>
    <string name="app_name">ClearScoreTask</string>
    <string name="welcome_to_clearscore">Welcome to ClearScore</string>
    <string name="enter_user_ref">Please enter your user reference</string>
    <string name="user_ref_hint">User reference</string>
    <string name="userRef">CS-SED-655426-708782</string>
    <string name="login">Login</string>
    <string name="clearscore_logo">ClearScore Logo</string>
    <string name="your_credit_score_is">Your credit score is</string>
    <string name="out_of_700">out of 700</string>
    <string name="return_to_graph">Return to graph</string>
    <string name="your_credit_score_band_is">Your credit score band is</string>
    <string name="your_credit_score_description_is">Your credit score description is</string>
    <string name="you_have_tasks_outstanding">You have tasks outstanding</string>
    <string name="how_to_improve">How to improve your credit score.</string>
    <string name="logout">Logout</string>
    <string name="more_details">More details</string>
    <string name="improve_your_score">Improve your score</string>
    <string name="create_new_account">Create new account</string>
</resources>